@@ -208,14 +208,10 @@ r"""%% LilyPond file to list all font symbols and the corresponding names
 		## \musicglyph and \markup require "_" to be escaped
 		## differently
 		scm_string = re.sub ('_', r'_', m['name'])
-		tex_string = re.sub ('_', r'\\_' , m['name'])
-
-		## prevent TeX from interpreting "--" as long dash
-		tex_string = re.sub ('--','-{}-', tex_string)
 
 		file.write ('''    \\markup { \\raise #0.75 \\vcenter
 	      \\musicglyph #"%s"
-	      \\typewriter " %s" } 4\n''' % (scm_string, tex_string))
+	      \\typewriter " %s" } 4\n''' % (scm_string, scm_string))
 
 		if (count % per_line) == 0:
 			file.write ('    \\skip 8 \\break\n')
