@@ -1,3 +1,10 @@
+2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/main.cc: remove -m, --no-layout
+
+	* flower/include/libc-extension.hh: add ALIAS_FILE_TO_FILECOOKIE
+	to define. We don't want to override fprintf everywhere.
+
 2005-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* cygwin/lilypond.hint: 
